--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<head>
-  <title>Laura Nawrocki</title>
+<html>
+  <head>
+    <title>Laura Nawrocki</title>
+  </head>
   <style>
     body {
       text-align: center;
@@ -14,34 +16,16 @@
     p {
       font-size: 26px;
     }
-    input {
-      border: 0;
-      padding: 10px;
-      font-size: 18px;
-    }
-    input[type="submit"] {
-      background: gray;
-      color: white;
-    }
-    a {
-      color: purple;
-    }
     img {
       margin: 40px 40px 40px 40px;
       border: 7px solid white;
       border-radius: 100px;
     }
   </style>
-</head>
 <body>
-  <img src="cat.png">
+  <img src="cat.png" alt=cat in a tie, also known as business cat>
   <p>Hello!</p>
-  <p>I'm Laura Nawrocki, a candidate for General Assembly's Web Development Immersion program and apparent owner of many photos of cherry blossoms and cats!</p>
-  <p>Say hello below!</p>
-  <input type="text" placeholder="Your greeting.">
-  <input type="submit">
-  <p></p>
-  <a href="blogpage.html"> Link to blog page</a>
-  </p>
+  <p>I'm Laura Nawrocki, a student at General Assembly's Web Development Immersion program and apparent owner of many photos of cherry blossoms and cats!</p>
+  <p>Hello!</p>
 </body>
-
+</html>
