added quotes to alt text in image.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     }
   </style>
 <body>
-  <img src="cat.png" alt=cat in a tie, also known as business cat>
+  <img src="cat.png" alt="cat in a tie, also known as business cat">
   <p>Hello!</p>
   <p>I'm Laura Nawrocki, a student at General Assembly's Web Development Immersion program and apparent owner of many photos of cherry blossoms and cats!</p>
-  <p>Hello!</p>
 </body>
 </html>
