changing to portfolio page

--- a/index.html
+++ b/index.html
@@ -4,27 +4,16 @@
     <title>Laura Nawrocki</title>
   </head>
 <style>
-    body {
-      text-align: center;
-      background: url("cherryblossom.png");
-      background-size: cover;
-      background-position: center;
-      color: purple;
-      font-family: arial;
-      font-weight: bold;
-    }
-    p {
-      font-size: 26px;
-    }
-    img {
-      margin: 40px 40px 40px 40px;
-      border: 7px solid white;
-      border-radius: 100px;
-    }
+  
 </style>
 <body>
-  <img src="cat.png" alt="cat in a tie, also known as business cat">
-  <p>Hello!</p>
-  <p>I'm Laura Nawrocki, a student at General Assembly's Web Development Immersion program and apparent owner of many photos of cherry blossoms and cats!</p>
+  <body>
+    <div class="allButtons">
+      <button class="button">Laura</button>
+      <button class="button">About Me</button>
+      <button class="button">Portfolio</button>
+      <button class="button">Blog</button>
+    </div>
+</body>
 </body>
 </html>
