connecting scss stylepage and css compiled.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/styles.css">
     <title>Laura Nawrocki</title>
   </head>
-<style>
-  
-</style>
-<body>
   <body>
     <div class="allButtons">
       <button class="button">Laura</button>
@@ -14,6 +12,5 @@
       <button class="button">Portfolio</button>
       <button class="button">Blog</button>
     </div>
-</body>
 </body>
 </html>
