added style tags

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Laura Nawrocki</title>
   </head>
   <body>
+    <style>
     <div class="allButtons">
       <button class="button">Laura</button>
       <button class="button">About Me</button>
       <button class="button">Portfolio</button>
       <button class="button">Blog</button>
     </div>
+    </style>
 </body>
 </html>
