new portfolio page for GA

--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
     <title>Laura Nawrocki</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
+
   <body>
-    <div class="allButtons">
-      <button class="button">Laura</button>
-      <button class="button">About Me</button>
-      <button class="button">Portfolio</button>
-      <button class="button">Blog</button>
+    <div class="intro">
+     Hello!
     </div>
-</body>
+    <div class="intro">
+      I'm Laura, a web developer in Washington, DC. Learn more about my projects or contact me below.
+    </div>
+    <div id="container">
+      <div id="squares">
+        <a href="http://www.lauranawrocki.com" class="square laura">
+          <p>
+            Laura
+          </p>
+        </a>
+        <a href="http://www.lauranawrocki.com/resume.html" class="square resume">
+          <p>
+           Resume
+          </p>
+        </a>
+        <a href="http://www.lauranawrocki.com/projects.html" class="square projects">
+          <p>
+            Projects
+          </p>
+        </a>
+        <a href="http://www.lauranawrocki.com/contactme.html" class="square contactme">
+          <p>
+            Contact Me
+          </p>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
+
+<!-- http://codepen.io/anon/pen/Oypodr -->
