--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
      Hello!
     </div>
     <div class="intro">
-      I'm Laura, a web developer in Washington, DC. Learn more about my projects or contact me below.
+      I'm Laura, a web developer in Washington, DC.
+    </div>
+    <div class="intro">
+       Learn more about my projects or contact me below.
     </div>
     <div id="container">
       <div id="squares">
