--- a/contactme.html
+++ b/contactme.html
@@ -1,5 +1,17 @@
-<h2>
-  Contact me:
-</h2>
-<p>email: me@lauranawrocki.com</p>
-<p>github: http://www.github.com/laurawn</p>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Laura Nawrocki</title>
+    <link href="public/styles.css" rel="stylesheet" type="text/css" media="all">
+  </head>
+
+  <body>
+
+    <h2>
+      Contact me:
+    </h2>
+      <p>email: me@lauranawrocki.com</p>
+      <p>github: http://www.github.com/laurawn</p>
+  </body>
+</html>
