--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Laura Nawrocki</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="public/styles.css" rel="stylesheet" type="text/css" media="all">
   </head>
 
   <body>
