--- a/contactme.html
+++ b/contactme.html
@@ -7,11 +7,11 @@
   </head>
 
   <body>
-
-    <h2>
-      Contact me:
-    </h2>
-      <p>email: me@lauranawrocki.com</p>
-      <p>github: http://www.github.com/laurawn</p>
+    <h1>
+      Contact Me
+    </h1>
+      <h2>email: <a href="mailto:me@lauranawrocki.com">me@lauranawrocki.com</a></h2>
+      <h2>github: <a href="http://www.github.com/laurawn">http://www.github.com/laurawn</a></h2>
+      <h2>linkedin: <a href="http://www.linkedin.com/in/lwnawrocki">http://www.linkedin.com/in/lwnawrocki</a></h2>
   </body>
 </html>
