fixed resume page

--- a/resume.html
+++ b/resume.html
@@ -7,10 +7,8 @@
   </head>
 
   <body>
-
-<h2>Web Developer</h2>
-
-<h3>SKILLS</h3>
+<h1>Web Developer</h1>
+<h2>SKILLS</h2>
 <ul>
 <li>JavaScript, jQuery, JSON, AJAX</li>
 <li>Ruby on Rails, Sinatra</li>
@@ -19,26 +17,25 @@
 <li>InDesign, Acrobat, and Adobe Creative Suite</li>
 </ul>
 
-<h3>SUMMARY</h3>
-<p>Web developer able to communicate effectively with designers due to prior experience in publishing and working with both editors and production staff.</p>
+<h2>SUMMARY</h2>
+<h3>Web developer able to communicate effectively with designers due to prior experience in publishing and working with both editors and production staff.</h3>
 
-<h3>EXPERIENCE</h3>
-<p>Web Development Immersive at General Assembly</p>
-<p>Built fluency in front-and back-end web development through a three-month immersive program at General Assembly. Coursework and projects included MVC frameworks, test-driven development, and object-oriented programming. Projects included working in groups and working with a user experience design student to create web applications.</p>
-<p></p>
-<p>Contractor/Production Editor at the Agency for Healthcare Research and Quality (AHRQ)</p>
-<p>Worked in the Publications Department to create, edit, and publish documents in print and for the web, using Section 508-compatible technologies. Worked under deadline to complete projects, such as the following:</p>
-<p>As a copyeditor, a monthly research newsletter that received a second place Blue Pencil award for Best External Newsletter from the National Association of Government Communicators in 2014.</p>
-<p>As a production editor, created publications and designed templates for publications of varying lengths, for everything from newsletters to books.</p>
-<p></p>
-<p>Federal Investigator at the U.S. Equal Employment Opportunity Commission</p>
-<p>Investigated cases involving employment discrimination and decided if the cases had merit. Interviewed witnesses and analyzed documents prior to reaching a decision. Mediated and settled cases. Coordinated filing of cases with state and local fair employment practices agencies.<p>
+<h2>EXPERIENCE</h2>
+<h3>Web Development Immersive at General Assembly</h3>
+<h4>Built fluency in front-and back-end web development through a three-month immersive program at General Assembly. Coursework and projects included MVC frameworks, test-driven development, and object-oriented programming. Projects included working in groups and working with a user experience design student to create web applications.</h3>
+<h3>Contractor/Production Editor at the Agency for Healthcare Research and Quality (AHRQ)</h3>
+<h4>Worked in the Publications Department to create, edit, and publish documents in print and for the web, using Section 508-compatible technologies. Worked under deadline to complete projects, such as the following:</h4>
+<ul>
+  <li>As a copyeditor, a monthly research newsletter that received a second place Blue Pencil award for Best External Newsletter from the National Association of Government Communicators in 2014.</li>
+<li>As a production editor, created publications and designed templates for publications of varying lengths, for everything from newsletters to books.</li>
+</ul>
+<h3>Federal Investigator at the U.S. Equal Employment Opportunity Commission</h3>
+<h4>Investigated cases involving employment discrimination and decided if the cases had merit. Interviewed witnesses and analyzed documents prior to reaching a decision. Mediated and settled cases. Coordinated filing of cases with state and local fair employment practices agencies.</h4>
 
-<h3>EDUCATION</h3>
-<p>Web Development Immersive, General Assembly</p>
-<p>M.A., The George Washington University, Elliott School of International Affairs</p>
-<p>B.A., Drew University, College of Liberal Arts</p>
-
+<h2>EDUCATION</h2>
+<h3>Web Development Immersive, General Assembly</h3>
+<h3>M.A., The George Washington University, Elliott School of International Affairs</h3>
+<h3>B.A., Drew University, College of Liberal Arts</h3>
   </body>
 </html>
 
