--- a/company-green.html
+++ b/company-green.html
@@ -140,7 +140,7 @@
             <span>Welcome to my website.</span>
           </h1>
           <div class="call-to-action">
-            <a class="btn scroll" href="#services"><i class="fa fa-angle-down"></i>LEARN MORE</a>
+            <a class="btn scroll" href="#notes"><i class="fa fa-angle-down"></i>LEARN MORE</a>
           </div>
         </div>
         <div class="col-md-1 col-sm-1 col-xs-12 empty"></div>
