--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,12 @@
   <body>
     <h1>Projects</h1>
       <h2>Farmony Markets</h2>
-        <h3>A group project with Jared Arkin, Silvia Brown, and Omari Mayers-Walker in which we used USDA information to location nearby farmers markets. We wrote it using Express.JS.</h3>
+        <h3>A group project with Jared Arkin, Silvia Brown, and Omari Mayers-Walker at General Assembly where we plotted farmers market locations. We wrote it using Express on Node.JS.</h3>
         <h3><a href="http://farmony.herokuapp.com">http://farmony.herokuapp.com</a></h3>
+
+      <h2>NACCHO Annual Conference</h2>
+        <h3>A website for the National Association of City and County Health Officials (NACCHO) completed in the WordPress CMS with one other person.</h3>
+        <h3><a href="http://www.nacchoannual.org">http://www.nacchoannual.org</a></h3>
   </body>
+
 </html>
