added POST method to form

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <div class="container">
         <h2>Contact Form</h2>
         <div class="content">
-          <form role="form" action="http://formspree.io/me@lauranawrocki.com">
+          <form role="form" action="http://formspree.io/me@lauranawrocki.com" method="POST">
             <div class="form-group">
               <label for="exampleInputName"><i class="icon-tag"></i></label>
               <input type="text" name="sender-name" class="form-control" id="exampleInputName" placeholder="Full Name" required>
