--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       <div class="container">
         <h2>Contact Form</h2>
         <div class="content">
-          <form role="form" action="http://formspree.io/me@lauranawrocki.com" method="POST">
+          <form role="form" action="http://formspree.io/lwnawrocki@gmail.com" method="POST">
             <div class="form-group">
               <label for="exampleInputName"><i class="icon-tag"></i></label>
               <input type="text" name="sender-name" class="form-control" id="exampleInputName" placeholder="Full Name" required>
@@ -428,7 +428,7 @@
           <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="">
             <p class="social-media">
-              <a href="mailto:me@lauranawrocki.com" data-toggle="tooltip" title"email"><i class="fa fa-envelope"></i></a>
+              <a href="mailto:lwnawrocki@gmail.com" data-toggle="tooltip" title"email"><i class="fa fa-envelope"></i></a>
               <a href="http://www.linkedin.com/in/lwnawrocki" data-toggle="tooltip" title="linkedin"><i class="fa fa-linkedin"></i></a>
               <a href="http://www.github.com/laurawn" data-toggle="tooltip" title="github"><i class="fa fa-github"></i></a>
             </p>
