--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div><!-- /.modal -->
       <div class="modal fade" id="modal2" tabindex="-1" role="dialog">
         <div class="wrapper">
-          <img data-dismiss="modal" class="img-responsive" src="img/naccho-annual.jpg" alt="NACCHO Annual Conference">
+          <img data-dismiss="modal" class="img-responsive" src="img/nacchoannual.png" alt="NACCHO Annual Conference">
           <h2 class="modal-title"><a href="http://www.nacchoannual.org">NACCHO Annual Conference</a></h2>
         </div><!-- /.content -->
       </div><!-- /.modal -->
